Fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html {
 }
 
 body {
-  min-width: 100vw;
+  min-width: 100%;
   font: var(--small-mono-font);
   color: var(--accent-color);
 }
